syntax = "proto3";

package gk.v1;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

service Events {
	rpc Process(Event) returns (ProcessEventResponse) {
		option (google.api.http) = {
			post : "/v1/events"
			body : "*"
		};
	}
}

message Event {
	// A name that uniquely identify the event.
	// Supported names are,
	//   - "request/cache.rebuild:access"
	//   - "request/cache.rebuild:rbac"
	string                    name      = 1;
	google.protobuf.Any       payload   = 3;
	google.protobuf.Timestamp timestamp = 2;
}

message ProcessEventResponse {}

message RebuildAccessCacheEventPayload {
	repeated string ids = 1;
}

message RebuildRbacCacheEventPayload {
	repeated string ids = 1;
}
